alterações feitas por mim

--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
 </meta name="viewport"content="width edvice-width,inital-scale=1.0">
 <title>menu site Simples </title> 
 <link rel="stylesheet" href="styles.css">
-</heard>
+</head>
 <body>
-    <headers>
-        <h1>bem-vindo ao Meu site simples</h1>
+    <header>
+        <h1>SergipeTec</h1>
     </header>
     <nav>
         <ul>
-            <li><a herf="#">pagina inicial</a></li>
-            <li><a href="#">sobre</a></li>
-            <li><a href="#">contato</a></li>
+            <li><a herf="#">Página Inicial</a></li>
+            <li><a href="#">Quem é a gente?</a></li>
+            <li><a href="#">Contato</a></li>
             </ul>
             </nav>
             <main>
@@ -24,7 +24,7 @@
                 </section>
                     </main>
                     <footer>
-                        <p>&copy;2024 Menu site Simples </p>
+                        <p>São Cristóvão-Sergipe </p>
                         <footer>
                         </body>
                         <html>
